# cs357Project1

./: .gitignore  Anagrams.cabal  CHANGELOG.md  LICENSE  README.md  diff.txt  project.hs
.github/workflows/: ghc  haskell.yml
Dictionaries/: 01-Scoring.txt  Leaderboard.csv
app/: .ghc.environment.x86_64-linux-9.4.8  AI.hs  BrickMain.hs  Dictionary.hs  Git-pipeline.hi  Git-pipeline.hs  IO.hs  Main.hs  Score.hs  Tests.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
