cabal-version:      3.0

name:               Anagrams
version:            0.1.0.0
homepage:           https://github.com/rysc3/cs357/blob/main/proj1
license:            MIT
license-file:       LICENSE
author:             Ryan Scherbarth
maintainer:         rscherbarth@unm.edu
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded

-- Dependencies
executable Anagrams
    main-is:          Main.hs
    other-modules:    Score, Dictionary, Tests, BrickMain
    build-depends:    base ^>=4.17.2.1, containers, text, brick, vty, vty-crossplatform, optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
