cabal-version:      3.0

name:               Anagrams
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:           https://github.com/rysc3/proj1

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE
author:             Ryan Scherbarth
maintainer:         rscherbarth@unm.edu
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall -threaded

-- Dependencies
executable Anagrams
    main-is:          Main.hs

    other-modules:    Score, Dictionary, Tests

    build-depends:    base ^>=4.17.2.1 && < 5, 
                      containers, 
                      text, 
                      brick >= 0.50, 
                      vty, 
                      vty-crossplatform, 
                      optparse-applicative, 
                      random,
                      time

    hs-source-dirs:   app

    default-language: Haskell2010